--- a/Templates/List_templates.html
+++ b/Templates/List_templates.html
@@ -86,7 +86,11 @@
 
         <p style="position:relative; top:10px"><a href="#" name="{{title}}" style="margin-top:-25px;float:right;" class="ui-link ui-btn ui-icon-delete ui-btn-icon-right deleteButton listRulesetsButton">Delete</a></p>
 
+        <p style="position:relative; top:10px"><a style="margin-top:-25px;float:right;" name="{{title}}" href="#" class="ui-link ui-btn ui-icon-edit ui-btn-icon-right exportButton">Export</a></p>
+
         <p style="position:relative; top:10px"><a style="margin-top:-25px;float:right;" href="#update-prototype?prototype={{title}}" data-role="button" data-icon="edit" class="ui-link ui-btn ui-icon-edit ui-btn-icon-right editURLButton listRulesetsButton">Edit</a></p>
+
+
         
         <p><b>Name: </b> {{title}} </p>
         <p><b>Description: </b> {{meta}} </p>
